@@ -31,18 +31,18 @@
           </div>
         </div>
         <div class="span1 p05 col max24 mx">
-          <div class="span1 col ba b-green">
+          <div class="span1 col ba bc-green">
             <figure>
               <img class="block w100 bg-black-10" src="3x2.svg" width="318" height="212">
             </figure>
-            <div class="span1 p1 bt b-black-40">
+            <div class="span1 p1 bt bc-black-40">
               <p class="f2 lh3">Aenean mi lorem.</p>
               <div class="div my1"></div>
               <p class="f2 lh3">Aenean mi lorem.</p>
               <div class="div my1 color-purple"></div>
               <p class="f2 lh3">Aenean mi lorem.</p>
             </div>
-            <div class="p1 bt b-black-20 row">
+            <div class="p1 bt bc-black-20 row">
               <div class="span1"><p class="f2">footer</p></div>
               <div class="div px1 color-black-20"></div>
               <div class="span1 ar"><p class="f2">right</p></div>
@@ -54,12 +54,12 @@
             <figure>
               <img class="block w100 bg-black-10" src="3x2.svg" width="318" height="212">
             </figure>
-            <div class="span1 p1 bt b-orange color-indigo">
+            <div class="span1 p1 bt bc-orange color-indigo">
               <p class="f2 lh3">Nulla a bibendum eros. Vivamus maximus lorem risus, id condimentum mauris consequat vitae. Ut non nunc et turpis auctor iaculis in finibus est.</p>
               <div class="div py05 color-yellow"></div>
               <p class="f2 lh3">Nulla a bibendum eros. Vivamus maximus lorem risus, id condimentum mauris consequat vitae. Ut non nunc et turpis auctor iaculis in finibus est.</p>
             </div>
-            <div class="p1 bt b-orange">
+            <div class="p1 bt bc-orange">
               <p class="f2">footer</p>
             </div>
           </div>
